[+] changed ImageView to CardView for round corners of button shadow [+] eye icon for showing password changed alpha [+] added screen password recovery [+] added screen receiving a code from sms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="password">Пароль</string>
     <string name="login_button">Войти</string>
     <string name="forgot_password">Забыли пароль?</string>
+    <string name="restore_password">Восстановление пароля</string>
+    <string name="phone">Телефон</string>
+    <string name="get_code">Получить код</string>
+    <string name="code_from_sms">Введите код из смс</string>
+    <string name="change_password">Сменить пароль</string>
 </resources>
