--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="choose_character">Выбрать персонажа</string>
     <string name="change_data">Изменить данные</string>
     <string name="statistics">Статистика</string>
+    <string name="personal_area">ПРОФИЛЬ</string>
 </resources>
