[] changed personal account design; [+] added settings; [+] added rules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,18 +8,23 @@
     <string name="phone">Телефон</string>
     <string name="get_code">Получить код</string>
     <string name="code_from_sms">Введите код из смс</string>
-    <string name="change_password">Сменить пароль</string>
-    <string name="new_password">Новый пароль</string>
-    <string name="repeat_new_password">Повторите пароль</string>
+    <string name="change_password">сменить\nпароль</string>
+    <string name="new_password">новый пароль</string>
+    <string name="old_password">старый пароль</string>
+    <string name="repeat_new_password">повторите пароль</string>
     <string name="done_button">Готово</string>
     <string name="make_room">Создать комнату</string>
     <string name="list_tasks">Список задач</string>
-    <string name="regulations_game">Правила игры</string>
-    <string name="exit">Выйти</string>
-    <string name="play">Играть</string>
-    <string name="settings">Настройки</string>
+    <string name="regulations_game">правила</string>
+    <string name="exit">выход</string>
+    <string name="play">играть</string>
+    <string name="settings">настройки</string>
     <string name="choose_character">Выбрать персонажа</string>
     <string name="change_data">Изменить данные</string>
     <string name="statistics">Статистика</string>
     <string name="personal_area">ПРОФИЛЬ</string>
+    <string name="level">"уровень "</string>
+    <string name="score">"решено задач   "</string>
+    <string name="choose">выбрать</string>
+    <string name="change">сменить</string>
 </resources>
