--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,28 @@
 <resources>
     <string name="app_name">mm</string>
+
+    <!-- Login_Text -->
     <string name="login">Логин</string>
     <string name="password">Пароль</string>
-    <string name="login_button">Войти</string>
-    <string name="forgot_password">Забыли пароль?</string>
     <string name="restore_password">Восстановление пароля</string>
     <string name="phone">Телефон</string>
-    <string name="get_code">Получить код</string>
     <string name="code_from_sms">Введите код из смс</string>
-    <string name="change_password">сменить\nпароль</string>
     <string name="new_password">новый пароль</string>
     <string name="old_password">старый пароль</string>
     <string name="repeat_new_password">повторите пароль</string>
+
+    <!-- Settings_Text -->
+    <string name="change_password">сменить\nпароль</string>
+
+    <!-- Personal_Area_Text -->
+    <string name="personal_area">ПРОФИЛЬ</string>
+    <string name="level">"уровень "</string>
+    <string name="score">"решено задач   "</string>
+
+    <!-- Buttons -->
+    <string name="login_button">Войти</string>
+    <string name="forgot_password">Забыли пароль?</string>
+    <string name="get_code">Получить код</string>
     <string name="done_button">Готово</string>
     <string name="make_room">Создать комнату</string>
     <string name="list_tasks">Список задач</string>
@@ -19,12 +30,11 @@
     <string name="exit">выход</string>
     <string name="play">играть</string>
     <string name="settings">настройки</string>
-    <string name="choose_character">Выбрать персонажа</string>
     <string name="change_data">Изменить данные</string>
     <string name="statistics">Статистика</string>
-    <string name="personal_area">ПРОФИЛЬ</string>
-    <string name="level">"уровень "</string>
-    <string name="score">"решено задач   "</string>
     <string name="choose">выбрать</string>
     <string name="change">сменить</string>
+
+    <!-- Toast -->
+    <string name="ok_image_hero">Персонаж успешно изменён</string>
 </resources>
