--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,10 +24,18 @@
     <string name="list_tasks">список\nзадач</string>
 
     <!-- Personal_Area_Text -->
-    <string name="personal_area">ПРОФИЛЬ</string>
     <string name="level">"уровень "</string>
     <string name="score">"решено задач   "</string>
     <string name="code_room">код комнаты</string>
+
+    <!-- About Tasks -->
+    <string name="solved_green">решено верно</string>
+    <string name="solved_red">решено неверно</string>
+    <string name="condition_task">условие задачи</string>
+    <string name="solve_task">решение задачи</string>
+    <string name="not_solve">К сожалению, разбора данной задачи нет</string>
+    <string name="right_answer">верный ответ: </string>
+    <string name="student_answer">ваш ответ: </string>
 
     <!-- Buttons -->
     <string name="login_button">Войти</string>
@@ -45,7 +53,9 @@
     <string name="choose">выбрать</string>
     <string name="change">сменить</string>
     <string name="request_again">запросить повторно</string>
-
+    <string name="open">открыть</string>
+    <string name="solve">решение</string>
+    
     <!-- Toast -->
     <string name="ok_image_hero">Персонаж успешно изменён</string>
     <string name="ok_changed_password">Пароль успешно изменён</string>
